[+] Refactored Desktop package (multiple desktop issue remains)